...
                    android:fontFamily="cursive"
                    android:padding="16dp"
                    android:text="Mood"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/emotionSelector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Spinner
                    android:id="@+id/emotionSelector"
...
                    app:counterMaxLength="20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/reasonTextView"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reason_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ae_reason_text"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textColor="@color/colorBlack"
...


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
...
        android:background="@drawable/cancelbutton"
        android:text="@string/am_cancel_text"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
...
