...
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="60sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_border_rounded_corner"
                android:drawableStart="@drawable/ic_person_blue_18dp"
                android:drawablePadding="8dp"
                android:hint="Username"
...
                android:padding="16dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.7dp"
                android:background="@drawable/blue_border_rounded_corner"
                android:drawableStart="@drawable/ic_eye_blue_18dp"
                android:drawablePadding="8dp"
...
                android:textColorLink="#236FE2"
                android:textCursorDrawable="@color/colorPrimary"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="18dp"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/blue_fill__rounded_color"
                android:gravity="center"
                android:paddingTop="14dp"
...
